--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,8 @@ set(PROJECT_SOURCES
     src/key.c
     src/msp.c
     src/usart.c
-    src/tim.c)
+    # src/tim.c
+    src/stm32f4xx_hal_timebase_tim.c)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Dprintf=printf_hook")
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
   message("Debug
